<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_progreso"
        android:title="@string/progress"
        android:icon="@android:drawable/ic_menu_today" />

    <item
        android:id="@+id/nav_stats"
        android:title="@string/stats"
        android:icon="@android:drawable/ic_menu_sort_by_size" />

    <item
        android:id="@+id/nav_add"
        android:title="@string/add"
        android:icon="@android:drawable/ic_menu_add" />

    <item
        android:id="@+id/nav_reminders"
        android:title="@string/alerts"
        android:icon="@android:drawable/ic_popup_reminder" />

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@android:drawable/ic_menu_manage" />

</menu>