<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/etEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/etEditGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goal"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnUpdateHabit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:layout_marginTop="20dp"/>

</LinearLayout>